Call #install() on instance of Installer class

--- a/bin/install
+++ b/bin/install
@@ -6,4 +6,5 @@
  * Run by npm as the post-install step. This file is an ES5 wrapper around
  * lib/Install.js to avoid transpiling this executable.
  */
-require('./lib/Installer').install()
+var Installer = require('../lib/Installer')
+new Installer().install()
